# smac

./: CMakeLists.txt  LICENSE.txt  README.md  README.txt
doc/: CMakeLists.txt  Doxyfile.in  defs.dox  design.dox  mainpage.dox  refs.dox
example_data/: download  upload
examples/ArticleExamples/HarmonicOPs/DiffractionPattern/: align.cpp  align_fcc.cpp  alignv2.cpp
examples/ArticleExamples/HarmonicOPs/Helix/: helix.cpp
examples/ArticleExamples/HarmonicOPs/SimilarityMatrix/: matrix.cpp
examples/ArticleExamples/ShapeMatching/BasicMatchFCC/: basic_match_fcc.cpp
examples/ArticleExamples/ShapeMatching/BondDiagrams/: diamond.cpp  gyroid.cpp  nbrmap2d.cpp  nbrmap3d.cpp  sheets.cpp
examples/ArticleExamples/ShapeMatching/DitetheredNanoSphere/: dithered.cpp  ditheredD2-all.cpp  dithered_D2.cpp
examples/ArticleExamples/ShapeMatching/HexClusters/: find_grains.cpp
examples/ArticleExamples/ShapeMatching/HexClustersGranular/: find_grains.cpp  find_grains_v2.cpp  grain_criterion.cpp  time_correlation.cpp
examples/ArticleExamples/ShapeMatching/LJGAutoPhaseDiagram/: phase_diagram.cpp  phase_diagram_v2.cpp  plot.sh
examples/ArticleExamples/ShapeMatching/SimilarityWater/: plot.sh  similarity.cpp
examples/ArticleExamples/ShapeMatching/StackingFault/: stacking_fault.cpp  stacking_faultv2.cpp
examples/ArticleExamples/ShapeMatching/Tetrahedra/: dipyramids.cpp  dipyramids.py  loadcustom.h
examples/ArticleExamples/ShapeMatching/UbiquitinStretching/: stretch.cpp
src/: Cell.cpp  Cell.h  CellList.cpp  CellList.h  HistogramConst.hpp  HistogramDynamic.hpp  HistogramMapped.hpp  cluster.cpp  cluster.h  config.h  diagnostics.cpp  diagnostics.h  io.cpp  io.h  matchfun.cpp  matchfun.h  neighbormap.cpp  neighbormap.h  operator.cpp  operator.h  preprocess.cpp  preprocess.h  rand.cpp  rand.h  register.cpp  register.h  shpdesccontext.cpp  shpdesccontext.h  shpdescdist.cpp  shpdescdist.h  shpdescfourier.cpp  shpdescfourier.h  shpdeschist.cpp  shpdeschist.h  shpdescrms.cpp  shpdescrms.h  shpdescwigner3j.cpp  shpdescwigner3j.h  shpdesczernike.cpp  shpdesczernike.h  (+8 more)
unit_tests/: CMakeLists.txt  fourierdescriptor2d_test.cpp  fourierdescriptor3d_test.cpp  loadlammps_test.cpp  loadxyz_test.cpp  localorder_test.cpp  matchfun_test.cpp  registericp_test.cpp  rmsdescriptor_test.cpp
wrap/python/: CMakeLists.txt  mk_swig_file.sh  smac.i
wrap/python/py++/: bindings.cpp  buildBindings.py  buildSharedLibrary.py
wrap/python/py++/pysmac/: __init__.py  formats.py  match.py  matchlib.py
